[package]
name = "aalto2"
version = "0.1.0"
edition = "2021"
authors = ["Elias Arno Eskelinen <elias.eskelinen@pm.me>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "aalto2"

[[bin]]
name = "aalto2bin"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = {version = "0.2.78", optional = true}
serde = {version = "1.0", optional = true, features = ["derive"]}
serde_json = {version = "1.0", optional = true}

[features]
default = [ "wasm" ]
wasm = [ "wasm-bindgen", "serde_derive" ]
serde_derive = [ "serde", "serde_json" ]