[package]
name = "aalto"
version = "0.2.1"
edition = "2021"
authors = ["Elias Arno Eskelinen <elias.eskelinen@pm.me>"]
license = "MIT"
repository = "https://github.com/xypine/aalto"
documentation = "https://docs.rs/aalto"
description = "a simple implementation of a wave collapse algorithm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "aalto"

[[bin]]
name = "aaltobin"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = {version = "0.2.78", optional = true}
serde = {version = "1.0", optional = true, features = ["derive"]}
serde_json = {version = "1.0", optional = true}

[features]
default = [ "wasm" ]
wasm = [ "wasm-bindgen", "serde_derive" ]
serde_derive = [ "serde", "serde_json" ]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
